--- a/akshat/template/index.html
+++ b/akshat/template/index.html
@@ -9,7 +9,7 @@
       justify-content: space-between;
       align-items: flex-start;
       height: 100vh; /* Set the body height to the viewport height */
-      margin: 0px;¨
+      margin: 0px;
       background-color: #001f3f; /* Dark background color */
       font-family: 'Open Sans', sans-serif;
       color: #FFFFFF; /* White text color */
